--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Avani CondoPark</title>
+	<title>Locomobi Touchscreen App</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.min.css">
 	<link rel="stylesheet" href="assets/libs/third-party/jquery.timepicker.css">
