--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Locomobi Touchscreen App</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.min.css">
-	<link rel="stylesheet" href="assets/libs/third-party/jquery.timepicker.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css">
-	<link rel="stylesheet" href="bower_components/ng-notifications-bar/dist/ngNotificationsBar.min.css" />
 	<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 	<div class="container-fluid" ng-view></div>
 	<!-- Angular Library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+	<script src="/bower_components/angular/angular.min.js"></script>
 
 	<!-- Angular Libraries -->
 	<script src="assets/libs/angular/angular-route.min.js"></script>
@@ -32,21 +28,12 @@
 	<script src="app/filters.min.js"></script>
 
 	<!-- Third Party Libraries -->
+	<script src="assets/js/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.js"></script>
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-	<script src="assets/libs/third-party/base64.js"></script>
-	<script src="assets/libs/third-party/jquery.timepicker.min.js"></script>
-	<script src="/bower_components/Chart.js/Chart.min.js"></script>
-	<script src="/bower_components/angular-chart.js/dist/angular-chart.js"></script>
-	<script src="assets/libs/third-party/dataTables.js"></script>
-	<script src="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+	<script src="bower_components/bootstrap/js/bootstrap.js"></script>
+	<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-	<script src="bower_components/ng-notifications-bar/dist/ngNotificationsBar.min.js"></script>
-	<script src="//cdn.datatables.net/plug-ins/1.10.12/sorting/numeric-comma.js"></script>
-<!-- 	<script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
-	<script src="//cdn.datatables.net/rowreorder/1.1.1/js/dataTables.rowReorder.min.js"></script>
-	<script src="//cdn.datatables.net/responsive/2.0.2/js/dataTables.responsive.min.js"></script> -->
 	
 </body>
 </html>
