--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.min.css">
 	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="bower_components/angular-on-screen-keyboard/dist/angular-on-screen-keyboard.min.css">
 </head>
 <body>
 	<div class="container-fluid" ng-view></div>
@@ -32,6 +33,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.js"></script>
 	<script src="bower_components/bootstrap/js/bootstrap.js"></script>
+	<script src="bower_components/angular-on-screen-keyboard/dist/angular-on-screen-keyboard.min.js"></script>
 	<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	
