--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="assets/libs/third-party/jquery-ui-1.11.4/jquery-ui.min.css">
 	<link rel="stylesheet" href="assets/css/styles.css">
 	<link rel="stylesheet" href="bower_components/angular-on-screen-keyboard/dist/angular-on-screen-keyboard.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 	<div class="container-fluid" ng-view></div>
